implmnt decision stack; agile style